--- a/mur/index.html
+++ b/mur/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MUR - GOU FAFAR - UFMG</title>
-    <meta name="description" content="Sobre O Ministério Universidades Renovadas (MUR)"><meta name="robots" content="noindex, nofollow"><link rel="shortcut icon" href="/favicon.ico"><style>
+    <meta name="description" content="Sobre O Ministério Universidades Renovadas (MUR)"><meta name="robots" content="noindex, nofollow"><link rel="shortcut icon" href="/ribdaniel.github.io/testeGOU/favicon.ico"><style>
   a,
   body,
   div,
@@ -329,7 +329,7 @@
   }
 </style>
 <noscript id="deferredCss">
-  <link rel="stylesheet" href="/app.css">
+  <link rel="stylesheet" href="/ribdaniel.github.io/testeGOU/app.css">
 </noscript>
 <script>
   document.createElement("picture");
@@ -342,7 +342,7 @@
   <div class="container">
     <div class="padder">
       <div class="navbar animated slideInDown">
-        <div class="logo"><a href="/"><img src="/img/logo.svg" alt="Logo GOU &amp; Logo Universidades Renovadas"></a></div>
+        <div class="logo"><a href="/"><img src="/ribdaniel.github.io/testeGOU/img/logo.svg" alt="Logo GOU &amp; Logo Universidades Renovadas"></a></div>
         <div class="burger-wrap">
           <div class="burger">
             <div class="top"></div>
@@ -351,7 +351,7 @@
           </div>
         </div>
         <ul class="links">
-          <li ><a href="/about">Sobre Nós</a></li><li class="active"><a href="/mur">O ministério</a></li><li ><a href="/participe">Participe Conosco</a></li><li ><a href="/contact">Fale Conosco</a></li></ul>
+          <li ><a href="ribdaniel.github.io/testeGOU/about">Sobre Nós</a></li><li class="active"><a href="ribdaniel.github.io/testeGOU/mur">O ministério</a></li><li ><a href="ribdaniel.github.io/testeGOU/participe">Participe Conosco</a></li><li ><a href="ribdaniel.github.io/testeGOU/contact">Fale Conosco</a></li></ul>
       </div>
     </div>
   </div>
@@ -385,8 +385,8 @@
   var raf = requestAnimationFrame || mozRequestAnimationFrame || webkitRequestAnimationFrame || msRequestAnimationFrame;
   if (raf) raf(function() { window.setTimeout(loadDeferredCss, 0); });
   else addToLoad(loadDeferredCss);
-</script><script src="/vendor.js"></script>
-<script src="/app.js"></script>
+</script><script src="/ribdaniel.github.io/testeGOU/vendor.js"></script>
+<script src="/ribdaniel.github.io/testeGOU/app.js"></script>
 <script>require('app').init()</script>
 </body>
 </html>
