Changes URL again

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sobre Nós - GOU FAFAR - UFMG</title>
-    <meta name="description" content="Sobre o Grupo de Oração Universitário da Faculdade de Farmácia da UFMG (GOU FAFAR)."><meta name="robots" content="noindex, nofollow"><link rel="shortcut icon" href="/ribdaniel.github.io/testeGOU/favicon.ico"><style>
+    <meta name="description" content="Sobre o Grupo de Oração Universitário da Faculdade de Farmácia da UFMG (GOU FAFAR)."><meta name="robots" content="noindex, nofollow"><link rel="shortcut icon" href="/testeGOU/favicon.ico"><style>
   a,
   body,
   div,
@@ -329,7 +329,7 @@
   }
 </style>
 <noscript id="deferredCss">
-  <link rel="stylesheet" href="/ribdaniel.github.io/testeGOU/app.css">
+  <link rel="stylesheet" href="/testeGOU/app.css">
 </noscript>
 <script>
   document.createElement("picture");
@@ -342,7 +342,7 @@
   <div class="container">
     <div class="padder">
       <div class="navbar animated slideInDown">
-        <div class="logo"><a href="/"><img src="/ribdaniel.github.io/testeGOU/img/logo.svg" alt="Logo GOU &amp; Logo Universidades Renovadas"></a></div>
+        <div class="logo"><a href="/"><img src="/testeGOU/img/logo.svg" alt="Logo GOU &amp; Logo Universidades Renovadas"></a></div>
         <div class="burger-wrap">
           <div class="burger">
             <div class="top"></div>
@@ -351,7 +351,7 @@
           </div>
         </div>
         <ul class="links">
-          <li class="active"><a href="ribdaniel.github.io/testeGOU/about">Sobre Nós</a></li><li ><a href="ribdaniel.github.io/testeGOU/mur">O ministério</a></li><li ><a href="ribdaniel.github.io/testeGOU/participe">Participe Conosco</a></li><li ><a href="ribdaniel.github.io/testeGOU/contact">Fale Conosco</a></li></ul>
+          <li class="active"><a href="/testeGOU/about">Sobre Nós</a></li><li ><a href="/testeGOU/mur">O ministério</a></li><li ><a href="/testeGOU/participe">Participe Conosco</a></li><li ><a href="/testeGOU/contact">Fale Conosco</a></li></ul>
       </div>
     </div>
   </div>
@@ -359,7 +359,7 @@
 <div class="header">
   <div class="container">
     <div class="padder">
-      <div class="main-description animated fadeIn"><h1 class="break-word">Aprenda um pouco mais sobre o GOU! <span class="blue-text">Só quem conhece, ama</span>!</h1><picture><source media="(max-width: 46.25em)" srcset="/ribdaniel.github.io/testeGOU/img/profile_360x318.png 360w, /ribdaniel.github.io/testeGOU/img/profile_565x420.png 565w, /ribdaniel.github.io/testeGOU/img/profile_848x443.png 848w"><img class="image-item" src="/ribdaniel.github.io/testeGOU/img/profile_img.png" alt="The designer&#39;s workspace table image">
+      <div class="main-description animated fadeIn"><h1 class="break-word">Aprenda um pouco mais sobre o GOU! <span class="blue-text">Só quem conhece, ama</span>!</h1><picture><source media="(max-width: 46.25em)" srcset="/testeGOU/img/profile_360x318.png 360w, /testeGOU/img/profile_565x420.png 565w, /testeGOU/img/profile_848x443.png 848w"><img class="image-item" src="/testeGOU/img/profile_img.png" alt="The designer&#39;s workspace table image">
     </picture></div>
     </div>
   </div>
@@ -386,8 +386,8 @@
   var raf = requestAnimationFrame || mozRequestAnimationFrame || webkitRequestAnimationFrame || msRequestAnimationFrame;
   if (raf) raf(function() { window.setTimeout(loadDeferredCss, 0); });
   else addToLoad(loadDeferredCss);
-</script><script src="/ribdaniel.github.io/testeGOU/vendor.js"></script>
-<script src="/ribdaniel.github.io/testeGOU/app.js"></script>
+</script><script src="/testeGOU/vendor.js"></script>
+<script src="/testeGOU/app.js"></script>
 <script>require('app').init()</script>
 </body>
 </html>
