--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>404 Page not found - GOU FAFAR - UFMG</title>
-    <meta name="description" content=""><meta name="robots" content="noindex, nofollow"><link rel="shortcut icon" href="/testeGOU/favicon.ico"><style>
+    <meta name="description" content=""><meta name="robots" content="noindex, nofollow"><link rel="shortcut icon" href="/favicon.ico"><style>
   a,
   body,
   div,
@@ -329,7 +329,7 @@
   }
 </style>
 <noscript id="deferredCss">
-  <link rel="stylesheet" href="/testeGOU/app.css">
+  <link rel="stylesheet" href="/app.css">
 </noscript>
 <script>
   document.createElement("picture");
@@ -384,7 +384,7 @@
   <div class="container">
     <div class="padder">
       <div class="navbar animated slideInDown">
-        <div class="logo"><a href="/"><img src="/testeGOU/img/logo.svg" alt="Logo GOU &amp; Logo Universidades Renovadas"></a></div>
+        <div class="logo"><a href="/"><img src="/img/logo.svg" alt="Logo GOU &amp; Logo Universidades Renovadas"></a></div>
         <div class="burger-wrap">
           <div class="burger">
             <div class="top"></div>
@@ -393,7 +393,7 @@
           </div>
         </div>
         <ul class="links">
-          <li ><a href="/testeGOU/about">Sobre Nós</a></li><li ><a href="/testeGOU/mur">O ministério</a></li><li ><a href="/testeGOU/participe">Participe Conosco</a></li><li ><a href="/testeGOU/contact">Fale Conosco</a></li></ul>
+          <li ><a href="/about">Sobre Nós</a></li><li ><a href="/mur">O ministério</a></li><li ><a href="/participe">Participe Conosco</a></li><li ><a href="/contact">Fale Conosco</a></li></ul>
       </div>
     </div>
   </div>
@@ -432,8 +432,8 @@
   var raf = requestAnimationFrame || mozRequestAnimationFrame || webkitRequestAnimationFrame || msRequestAnimationFrame;
   if (raf) raf(function() { window.setTimeout(loadDeferredCss, 0); });
   else addToLoad(loadDeferredCss);
-</script><script src="/testeGOU/vendor.js"></script>
-<script src="/testeGOU/app.js"></script>
+</script><script src="/vendor.js"></script>
+<script src="/app.js"></script>
 <script>require('app').init()</script>
 </body>
 </html>
