Changes links again

--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fale Conosco - GOU FAFAR - UFMG</title>
-    <meta name="description" content="Pagina de Contato GOU FAFAR UFMG."><meta name="robots" content="noindex, nofollow"><link rel="shortcut icon" href="/favicon.ico"><style>
+    <meta name="description" content="Pagina de Contato GOU FAFAR UFMG."><meta name="robots" content="noindex, nofollow"><link rel="shortcut icon" href="/testeGOU/favicon.ico"><style>
   a,
   body,
   div,
@@ -329,7 +329,7 @@
   }
 </style>
 <noscript id="deferredCss">
-  <link rel="stylesheet" href="/app.css">
+  <link rel="stylesheet" href="/testeGOU/app.css">
 </noscript>
 <script>
   document.createElement("picture");
@@ -342,7 +342,7 @@
   <div class="container">
     <div class="padder">
       <div class="navbar animated slideInDown">
-        <div class="logo"><a href="/"><img src="/img/logo.svg" alt="Logo GOU &amp; Logo Universidades Renovadas"></a></div>
+        <div class="logo"><a href="/"><img src="/testeGOU/img/logo.svg" alt="Logo GOU &amp; Logo Universidades Renovadas"></a></div>
         <div class="burger-wrap">
           <div class="burger">
             <div class="top"></div>
@@ -351,7 +351,7 @@
           </div>
         </div>
         <ul class="links">
-          <li ><a href="/about">Sobre Nós</a></li><li ><a href="/mur">O ministério</a></li><li ><a href="/participe">Participe Conosco</a></li><li class="active"><a href="/contact">Fale Conosco</a></li></ul>
+          <li ><a href="/testeGOU/about">Sobre Nós</a></li><li ><a href="/testeGOU/mur">O ministério</a></li><li ><a href="/testeGOU/participe">Participe Conosco</a></li><li class="active"><a href="/testeGOU/contact">Fale Conosco</a></li></ul>
       </div>
     </div>
   </div>
@@ -359,14 +359,14 @@
 <div class="header">
   <div class="container">
     <div class="padder">
-      <div class="main-description animated fadeIn"><h1 class="break-word">Tem alguma dúvida, sugestão ou comentário? <span class="blue-text">Fale conosco</span>!</h1><picture><source media="(max-width: 46.25em)" srcset="/img/contact_360x318.png 360w, /img/contact_565x420.png 565w, /img/contact_848x443.png 848w"><img class="image-item" src="/img/contact_img.png" alt="Imagem de Contato">
+      <div class="main-description animated fadeIn"><h1 class="break-word">Tem alguma dúvida, sugestão ou comentário? <span class="blue-text">Fale conosco</span>!</h1><picture><source media="(max-width: 46.25em)" srcset="/testeGOU/img/contact_360x318.png 360w, /testeGOU/img/contact_565x420.png 565w, /testeGOU/img/contact_848x443.png 848w"><img class="image-item" src="/testeGOU/img/contact_img.png" alt="Imagem de Contato">
     </picture></div>
     </div>
   </div>
 </div><div class="container">
     <div class="padder">
 <div class="categories clearfix bottom-space"><div class="category"><div class="name">Email</div><div class="description"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, atque officiis ut, veritatis reiciendis sequi quos officia quidem tempora minus fugit a suscipit nulla possimus?</p><br/><p>Fale Conosco&#58; <a class="blue-text bold-text" href="mailto:goufarmaciaufmg@gmail.com?subject=Contato via site GOU">goufarmaciaufmg@gmail.com</a></p></div></div></div><ul class="projects clearfix"><li class="project">
-      <a href="https://facebook.com/goufarmaciaufmg/"><picture><img class="image-item" src="/img/pagina_gou.png" alt="Imagem da página do Facebook do GOU FAFAR.">
+      <a href="https://facebook.com/goufarmaciaufmg/"><picture><img class="image-item" src="/testeGOU/img/pagina_gou.png" alt="Imagem da página do Facebook do GOU FAFAR.">
     </picture><div class="project-hover">
           <div class="project-caption"><div class="project-title">Facebook</div><div class="project-type">Curta nossa página!</div></div>
         </div>
@@ -392,8 +392,8 @@
   var raf = requestAnimationFrame || mozRequestAnimationFrame || webkitRequestAnimationFrame || msRequestAnimationFrame;
   if (raf) raf(function() { window.setTimeout(loadDeferredCss, 0); });
   else addToLoad(loadDeferredCss);
-</script><script src="/vendor.js"></script>
-<script src="/app.js"></script>
+</script><script src="/testeGOU/vendor.js"></script>
+<script src="/testeGOU/app.js"></script>
 <script>require('app').init()</script>
 </body>
 </html>
