--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GOU FAFAR - UFMG</title>
-    <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor cumque magnam aliquid, explicabo amet quasi eveniet reprehenderit dolorum exercitationem maiores provident ex error, tenetur."><meta name="robots" content="noindex, nofollow"><link rel="shortcut icon" href="/favicon.ico"><style>
+    <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor cumque magnam aliquid, explicabo amet quasi eveniet reprehenderit dolorum exercitationem maiores provident ex error, tenetur."><meta name="robots" content="noindex, nofollow"><link rel="shortcut icon" href="/testeGOU/favicon.ico"><style>
   a,
   body,
   div,
@@ -330,7 +330,7 @@
   }
 </style>
 <noscript id="deferredCss">
-  <link rel="stylesheet" href="/app.css">
+  <link rel="stylesheet" href="/testeGOU/app.css">
 </noscript>
 <script>
   document.createElement("picture");
@@ -343,7 +343,7 @@
   <div class="container">
     <div class="padder">
       <div class="navbar animated slideInDown">
-        <div class="logo"><a href="/"><img src="/img/logo.svg" alt="Logo GOU &amp; Logo Universidades Renovadas"></a></div>
+        <div class="logo"><a href="/"><img src="/testeGOU/img/logo.svg" alt="Logo GOU &amp; Logo Universidades Renovadas"></a></div>
         <div class="burger-wrap">
           <div class="burger">
             <div class="top"></div>
@@ -352,7 +352,7 @@
           </div>
         </div>
         <ul class="links">
-          <li ><a href="/about">Sobre Nós</a></li><li ><a href="/mur">O ministério</a></li><li ><a href="/participe">Participe Conosco</a></li><li ><a href="/contact">Fale Conosco</a></li></ul>
+          <li ><a href="/testeGOU/about">Sobre Nós</a></li><li ><a href="/testeGOU/mur">O ministério</a></li><li ><a href="/testeGOU/participe">Participe Conosco</a></li><li ><a href="/testeGOU/contact">Fale Conosco</a></li></ul>
       </div>
     </div>
   </div>
@@ -360,26 +360,26 @@
 <div class="header">
   <div class="container">
     <div class="padder">
-      <div class="main-description animated fadeIn"><h1 class="break-word">Olá, somos o grupo de oração Universitário da Faculdade de Farmácia da UFMG (GOU FAFAR). Temos um <span class="blue-text">sonho de amor para o mundo</span>. <span class="blue-text">Junte-se a nós!</span></h1><picture><source media="(max-width: 46.25em)" srcset="/img/home_360x318.png 360w, /img/home_565x420.png 565w, /img/home_848x443.png 848w"><img class="image-item" src="/img/home_img.png" alt="The top of mountain image">
+      <div class="main-description animated fadeIn"><h1 class="break-word">Olá, somos o grupo de oração Universitário da Faculdade de Farmácia da UFMG (GOU FAFAR). Temos um <span class="blue-text">sonho de amor para o mundo</span>. <span class="blue-text">Junte-se a nós!</span></h1><picture><source media="(max-width: 46.25em)" srcset="/testeGOU/img/home_360x318.png 360w, /testeGOU/img/home_565x420.png 565w, /testeGOU/img/home_848x443.png 848w"><img class="image-item" src="/testeGOU/img/home_img.png" alt="The top of mountain image">
     </picture></div>
     </div>
   </div>
 </div><div class="container">
     <div class="padder">
 <div class="categories clearfix bottom-space"><div class="category"><div class="name">O que é GOU?</div><div class="description">O Grupo de Oração Universitário (GOU) é parte do Ministério Universidades Renovadas, que por sua vez pertence a Renovação Carismática Católica. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia esse aut, blanditiis ullam. Similique quo iusto ipsa, excepturi autem voluptate consectetur sit quae praesentium <span class="default-text bold-text">aliquam molestiae</span> minima ex perferendis aut unde tempora amet esse inventore quaerat molestias eum distinctio eligendi ducimus. Commodi voluptatem ab debitis inventore, laborum at maiores reiciendis dolor deleniti ipsam distinctio voluptas eos autem quidem a quia laboriosam similique soluta rem? Eum.</div></div><div class="category"><div class="name">contato</div><div class="description">Fale conosco por meio dos seguintes links Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div></div></div><ul class="projects clearfix"><li class="project">
-      <a href="https://murbh.wordpress.com/"><picture><img class="image-item" src="/img/screenshot_mur.png" alt="Página Inicial site MUR-BH">
+      <a href="https://murbh.wordpress.com/"><picture><img class="image-item" src="/testeGOU/img/screenshot_mur.png" alt="Página Inicial site MUR-BH">
     </picture><div class="project-hover">
           <div class="project-caption"><div class="project-title">MUR-BH</div><div class="project-type">Acesse o site do Ministério</div></div>
         </div>
       </a>
     </li><li class="project wide-col">
-      <a href="/eventos"><picture><img class="image-item" src="/img/goulaco.jpeg" alt="Grupo GOU Reunido">
+      <a href="/eventos"><picture><img class="image-item" src="/testeGOU/img/goulaco.jpeg" alt="Grupo GOU Reunido">
     </picture><div class="project-hover">
           <div class="project-caption"><div class="project-title">Nossos Eventos</div><div class="project-type">Participe Conosco</div></div>
         </div>
       </a>
     </li><li class="project short-col">
-      <a href="https://facebook.com/goufarmaciaufmg/"><picture><img class="image-item" src="/img/pagina_gou.png" alt="Imagem da página do Facebook do GOU FAFAR.">
+      <a href="https://facebook.com/goufarmaciaufmg/"><picture><img class="image-item" src="/testeGOU/img/pagina_gou.png" alt="Imagem da página do Facebook do GOU FAFAR.">
     </picture><div class="project-hover">
           <div class="project-caption"><div class="project-title">Facebook</div><div class="project-type">Curta nossa página!</div></div>
         </div>
@@ -405,8 +405,8 @@
   var raf = requestAnimationFrame || mozRequestAnimationFrame || webkitRequestAnimationFrame || msRequestAnimationFrame;
   if (raf) raf(function() { window.setTimeout(loadDeferredCss, 0); });
   else addToLoad(loadDeferredCss);
-</script><script src="/vendor.js"></script>
-<script src="/app.js"></script>
+</script><script src="/testeGOU/vendor.js"></script>
+<script src="/testeGOU/app.js"></script>
 <script>require('app').init()</script>
 </body>
 </html>
