--- a/about/index.html
+++ b/about/index.html
@@ -342,7 +342,7 @@
   <div class="container">
     <div class="padder">
       <div class="navbar animated slideInDown">
-        <div class="logo"><a href="/"><img src="/testeGOU/img/logo.svg" alt="Logo GOU &amp; Logo Universidades Renovadas"></a></div>
+        <div class="logo"><a href="https://ribdaniel.github.io/testeGOU/"><img src="/testeGOU/img/logo.svg" alt="Logo GOU &amp; Logo Universidades Renovadas"></a></div>
         <div class="burger-wrap">
           <div class="burger">
             <div class="top"></div>
