--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         </div>
       </a>
     </li><li class="project wide-col">
-      <a href="/eventos"><picture><img class="image-item" src="/testeGOU/img/goulaco.jpeg" alt="Grupo GOU Reunido">
+      <a href="https://murbh.wordpress.com/encontros/"><picture><img class="image-item" src="/testeGOU/img/goulaco.jpeg" alt="Grupo GOU Reunido">
     </picture><div class="project-hover">
           <div class="project-caption"><div class="project-title">Nossos Eventos</div><div class="project-type">Participe Conosco</div></div>
         </div>
